background gradient is not fixed anymore but stretches. helps with animation performance

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,10 @@
 	transition: .3s all;
 }
 
+html {
+	min-height: 100%;
+}
+
 body {
 	overflow-y: scroll;
 	padding-top: 15px;
@@ -14,12 +18,12 @@ body {
 	user-select: none;
 
 	background: rgb(156,197,229); /* Old browsers */
-	background: -moz-linear-gradient(top,  rgb(156,197,229) 10%, rgb(201,255,191) 90%) fixed; /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(10%,rgb(156,197,229)), color-stop(90%,rgb(201,255,191))) fixed; /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  rgb(156,197,229) 10%,rgb(201,255,191) 90%) fixed; /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  rgb(156,197,229) 10%,rgb(201,255,191) 90%) fixed; /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  rgb(156,197,229) 10%,rgb(201,255,191) 90%) fixed; /* IE10+ */
-	background: linear-gradient(to bottom,  rgb(156,197,229) 10%,rgb(201,255,191) 90%) fixed; /* W3C */
+	background: -moz-linear-gradient(top,  rgb(156,197,229) 10%, rgb(201,255,191) 90%) ; /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(10%,rgb(156,197,229)), color-stop(90%,rgb(201,255,191))) ; /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgb(156,197,229) 10%,rgb(201,255,191) 90%) ; /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgb(156,197,229) 10%,rgb(201,255,191) 90%) ; /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgb(156,197,229) 10%,rgb(201,255,191) 90%) ; /* IE10+ */
+	background: linear-gradient(to bottom,  rgb(156,197,229) 10%,rgb(201,255,191) 90%) ; /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9cc5e5', endColorstr='#c9ffbf',GradientType=0 ); /* IE6-9 */
 
 }
